<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_finicio"
            android:icon="@drawable/ic_inicio"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_fmyperfil"
            android:icon="@drawable/ic_usuario"
            android:iconTint="@android:color/white"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_fmypedidos"
            android:icon="@drawable/ic_pedidos"
            android:iconTint="@android:color/white"
            android:title="@string/menu_pedidos" />
        <item
            android:id="@+id/nav_fmyproductos"
            android:icon="@drawable/ic_productos"
            android:iconTint="@android:color/white"
            android:title="@string/menu_productos" />
        <item
            android:id="@+id/nav_fmyestadisticas"
            android:icon="@drawable/ic_estadistica"
            android:iconTint="@android:color/white"
            android:title="@string/menu_marketing" />
        <item
            android:id="@+id/nav_fmynotificaciones"
            android:icon="@drawable/ic_notificacion"
            android:iconTint="@android:color/white"
            android:title="@string/menu_notificaciones" />
        <item
            android:id="@+id/nav_fgen_codigo"
            android:icon="@drawable/ic_repartidor"
            android:iconTint="@android:color/white"
            android:title="@string/menu_codigo" />

    </group>
    <item android:title="  ">
        <menu>
            <item
                android:id="@+id/nav_ajustes"
                android:title="@string/menu_ajustes" />
            <item
                android:id="@+id/nav_calificacion"
                android:title="@string/menu_calificacion" />
            <item
                android:id="@+id/nav_gcodigo"
                android:title="@string/menu_codigo" />
        </menu>
    </item>
</menu>